# fooddata-vegattributes

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  LICENSE  README.md  categories-toc.md  dev-notes.md  generate.py  index.md  poc.py  reference_samples.csv  setup.cfg
.gh-pages/: generate-pages.py  index.md
.gh-pages/content/: Gemfile  _config.yml  index.md
.github/workflows/: generate-and-deploy.yml
_data/: stats.yml
category-lists/: omni.md  uncategorized.md  vegan-or-omni.md  vegan-or-vegetarian.md  vegan-vegetarian-or-omni.md  vegan.md  vegetarian-or-omni.md  vegetarian.md
dev/: generate-readme.py  template-out-pages-index.rb
fooddata_vegattributes/: abstract_food_store.py  abstract_indexed_fooddata.py  abstract_reference_sample_store.py  annotate_reference_samples.py  auto_indexed_fooddata.py  auto_indexed_fooddata_food_store.py  categorization.py  category.py  cli.py  combined_heuristic.py  compressed_indexed_fooddata.py  create_reference_samples.py  csv_reference_sample_store.py  default_paths.py  description_based_heuristic.py  fdc_app.py  food.py  fooddata.py  generate.py  indexed_fooddata.py  indexed_fooddata_food_store.py  ingredient_based_heuristic.py  input_reference_samples.py  reference_sample.py  reference_samples.py  reference_samples_csv.py  reference_samples_io.py  vegattributes_dict.py
markdown-export/: uncategorized.md  vegan-or-vegetarian.md  vegetarian.md
pages-export/: categories-toc.md
stage/: _config.yml  categories-toc.md  dev-notes.md  index.md
stage/_data/: stats.yml
tests/: test_reference_sample_based.py
(+55 files in other folders)
