[metadata]
name = fooddata-vegattributes
version = 0.0.3

[options]
packages = fooddata_vegattributes

[options.extras_require]
test = pytest~=7.1; mypy~=0.950

[options.entry_points]
console_scripts =
  fooddata-vegattributes-generate = fooddata_vegattributes.generate:main
  # I can't break this properly because TOML is trash, sorry:
  fooddata-vegattributes-annotate-reference-samples = fooddata_vegattributes.annotate_reference_samples:main
