[metadata]
name = fooddata-vegattributes
version = 1.0.1

[options]
packages = fooddata_vegattributes

[options.extras_require]
test = pytest~=7.1; mypy~=0.950; pytest-cov~=3.0
dev = pre-commit~=2.20

[options.entry_points]
console_scripts =
  fooddata-vegattributes = fooddata_vegattributes.app.cli:main
